<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/element_round_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_drawer_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollIndicators="none"
        android:layout_marginTop="@dimen/margin"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/progess_bar_margin"
        android:layout_marginTop="@dimen/progess_bar_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/error"
        android:textSize="@dimen/message_error" />

</LinearLayout>